--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,8 +26,20 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* 隱藏滾動條 */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE 和 Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+textarea {
+  resize: none;
+}
+
+.overflow-wrap-balance {
+  overflow-wrap: balance;
 }
